# CloudyBack/Kjkardum.CloudyBack.Api/Controllers/Other/StatusController.cs
@@ -8,8 +8,4 @@ public class StatusController: ControllerBase
 {
     [HttpGet("health")]
     public ActionResult<string> HealthCheck() => Ok("Healthy");
-
-    [Authorize]
-    [HttpGet("authenticated")]
-    public ActionResult<string> AuthCheck() => Ok("Authenticated");
 }
