# CloudyFront/apispecs/swagger.yaml
@@ -31,6 +31,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
+  /api/Authentication/Logout:
+    post:
+      tags:
+        - Authentication
+      responses:
+        '204':
+          description: No Content
+  /api/Authentication/authenticated:
+    get:
+      tags:
+        - Authentication
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: string
+            application/json:
+              schema:
+                type: string
+            text/json:
+              schema:
+                type: string
   /api/resource/BaseResource:
     get:
       tags:
@@ -930,23 +954,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/DnsCheckDto'
   /health:
-    get:
-      tags:
-        - Status
-      responses:
-        '200':
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
-            text/json:
-              schema:
-                type: string
-  /authenticated:
     get:
       tags:
         - Status
